# solana-program-starter

./: .gitignore  .prettierignore  .prettierrc  Anchor.toml  Cargo.toml  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.husky/: pre-commit
programs/counter/: Cargo.toml
programs/review/: Cargo.toml
programs/review/src/: lib.rs
tests/review/: base.ts
tests/review/unit/: review.test.ts
